--- a/.github/workflows/replace-wp.yml
+++ b/.github/workflows/replace-wp.yml
@@ -2,7 +2,7 @@ name: Replace WP Prefixes
 on:
   push:
     branches:
-      - actions
+      - main
   workflow_dispatch:
 
 permissions:
@@ -24,13 +24,13 @@ jobs:
             git rm "wp-content/plugins/hello.php"
           fi
           
-          # First, create a list of files to rename, including internal wp- instances
+          # First, create a list of files to rename
           git ls-files | grep -i "wp" | grep -v "^\.github/" | grep -v "^readme\.md$" > files_to_rename.txt
           
-          # Process content replacements first, excluding .github directory and README.md
+          # Process content replacements first
           git ls-files | grep -v "^\.github/" | grep -v "^README\.md$" | while read -r file; do
             if [ -f "$file" ] && file "$file" | grep -q "text"; then
-              # Handle specific WordPress text replacement (case sensitive)
+              # Handle specific WordPress text replacement
               sed -i 's/WordPress/JKPress/g' "$file"
               
               # Handle PHP variables and functions
@@ -102,4 +102,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git diff-index --quiet HEAD || git commit -m "Replace wp- prefixes with jk- prefixes"
-          git push origin actions
+          git push origin main
