--- a/.github/workflows/replace-wp.yml
+++ b/.github/workflows/replace-wp.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
         
       - name: Run Replacement Script
         run: |
@@ -100,6 +102,21 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Fetch latest changes
+          git fetch origin main
+          
+          # Add changes
           git add .
-          git diff-index --quiet HEAD || git commit -m "Replace wp- prefixes with jk- prefixes"
-          git push origin main
+          
+          # Only commit if there are changes
+          if ! git diff-index --quiet HEAD; then
+            # Commit changes
+            git commit -m "Replace wp- prefixes with jk- prefixes"
+            
+            # Pull and rebase any new changes
+            git pull --rebase origin main
+            
+            # Push changes
+            git push origin main
+          fi
